--- a/WeiboBDProject/pom.xml
+++ b/WeiboBDProject/pom.xml
@@ -153,5 +153,11 @@
             <scope>system</scope>  
             <systemPath>${JAVA_HOME}/lib/tools.jar</systemPath>  
         </dependency>  
+        <dependency>
+	      <groupId>net.sf.json-lib</groupId>
+	      <artifactId>json-lib</artifactId>
+	      <version>2.4</version>
+	      <classifier>jdk15</classifier>
+	    </dependency>
  </dependencies>
 </project>
